--- a/FrontEnd/src/app/admin/admin.component.html
+++ b/FrontEnd/src/app/admin/admin.component.html
@@ -10,9 +10,9 @@
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
           <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fa-solid fa-dumbbell fa-bounce"></i>
+            <i class="fas fad fa-utensils"></i>
           </div>
-          <div class="sidebar-brand-text mx-3">Admin/{{tipo}}</div>
+          <div class="sidebar-brand-text mx-3">Admin/NutriTEC</div>
         </a>
 
         <li class="nav-item">
@@ -36,18 +36,18 @@
 
 
         <li class="nav-item">
-          <a id='ID_aprobacionProductos' class="nav-link collapsed" data-toggle="collapse"
+          <a id='gestTratSpa' class="nav-link collapsed" data-toggle="collapse"
              (click)="mostrarPantalla('aprobacionProductos')">
-             <i class="fa-regular fa-building"></i>
+            <i class="fas fa-regular fa-egg"></i>
             <span>Aprobación de productos</span>
           </a>
         </li>
 
         <!-- Nav Item - Pages Collapse Menu -->
         <li class="nav-item">
-          <a id='ID_reporteCobro' class="nav-link collapsed" data-toggle="collapse"
+          <a id='gestTratSpa2' class="nav-link collapsed" data-toggle="collapse"
              (click)="mostrarPantalla('reporteCobro')">
-            <i class="fas fa-regular fa-spa"></i>
+            <i class="fas fa-light fa-money-bills"></i>
             <span>Reporte de cobro</span>
           </a>
         </li>
@@ -112,8 +112,26 @@
           <!-- End of Topbar -->
 
 
-          <!-- Begin Page Content -->
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <!-- AQUI COMIENZAN LAS PANTALLAS -->
+          <!--------------------------------------------- COMIENZA PANTALLA PRINCIPAL --------------------------------------------->
           <div id="principal">
             <div class="container-fluid">
               <!-- Page Heading -->
@@ -182,6 +200,10 @@
 
             </div> <!-- termina el page content -->
           </div>
+          <!--------------------------------------------- TERMINA PANTALLA PRINCIPAL --------------------------------------------->
+
+
+
 
           <!-- EMPIEZA LA VENTANA APROBACION DE PRODUCTOS -->
 
@@ -225,7 +247,32 @@
 
           <!-- TERMINA VENTANA REPORTE DE COBRO -->
 
-          <!-- End of Main Content -->
+
+          <!-- AQUI COMIENZAN LAS PANTALLAS -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
           <!-- Footer -->
           <footer class="sticky-footer bg-white">
@@ -247,26 +294,6 @@
       <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
       </a>
-
-      <!-- Logout Modal-->
-      <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-           aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-            <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-              <a class="btn btn-primary" href="login.html">Logout</a>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
