--- a/FrontEnd/src/app/login-nutri/login-nutri.component.html
+++ b/FrontEnd/src/app/login-nutri/login-nutri.component.html
@@ -1,3 +1,4 @@
+<app-nav-var [color]="'success'"></app-nav-var>
 <div id="login">
   <div class="container">
     <div class="row">
@@ -6,7 +7,7 @@
           <div class="card-body p-4 p-sm-5">
             <h5 class="card-title text-center mb-5 fw-light fs-5">
               <div class="center">
-                <i class="fa-solid fa-image-portrait fa-2xl" style="color: #42a896;"></i>
+                <i class="fa-solid fa-image-portrait fa-2xl" style="color: #14A44D;"></i>
                 Login Nutri
               </div>
             </h5>
@@ -36,7 +37,7 @@
               </div>
               <hr class="my-4">
               <div class="copyright text-center my-auto">
-                <span>Copyright &copy; GymTEC 2023</span>
+                <span>Copyright &copy; NutriTEC 2023</span>
               </div>
             </form>
           </div>
@@ -140,7 +141,7 @@
               </div>
               <hr class="my-4">
               <div class="copyright text-center my-auto">
-                <span>Copyright &copy; GymTEC 2023</span>
+                <span>Copyright &copy; NutriTEC 2023</span>
               </div>
             </form>
           </div>
