--- a/FrontEnd/src/app/login-admin/login-admin.component.html
+++ b/FrontEnd/src/app/login-admin/login-admin.component.html
@@ -1,3 +1,4 @@
+<app-nav-var [color]="'primary'"></app-nav-var>
 <div id="login">
   <div class="container">
     <div class="row">
@@ -6,10 +7,7 @@
           <div class="card-body p-4 p-sm-5">
             <h5 class="card-title text-center mb-5 fw-light fs-5">
               <div class="center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-person" viewBox="0 0 20 20">
-                  <path d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h8zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4z"/>
-                  <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                </svg>
+                <i class="fa-solid fa-image-portrait fa-2xl" style="color: #3b71ca;"></i>
                 Login Admin
               </div>
             </h5>
@@ -35,7 +33,6 @@
 
               <div class="d-grid">
                 <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Login Admin</button>
-                <button class="btn btn-danger btn-login text-uppercase fw-bold" style="margin-left: 10px;" (click)="cambiarPantalla(0, $event)">Sign Up Admin</button>
               </div>
               <hr class="my-4">
               <div class="copyright text-center my-auto">
@@ -57,10 +54,7 @@
           <div class="card-body p-4 p-sm-5">
             <h5 class="card-title text-center mb-5 fw-light fs-5">
               <div class="center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-file-person" viewBox="0 0 20 20">
-                  <path d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h8zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4z"/>
-                  <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                </svg>
+                <i class="fa-solid fa-image-portrait fa-2xl" style="color: #3b71ca;"></i>
                 Sign Up Admin
               </div>
             </h5>
@@ -118,8 +112,8 @@
               </div>
 
               <div class="d-grid">
-                <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign Up</button>
-                <button class="btn btn-danger btn-login text-uppercase fw-bold" style="margin-left: 10px;" (click)="cambiarPantalla(1, $event)">Login</button>
+                <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign Up Admin</button>
+                <button class="btn btn-danger btn-login text-uppercase fw-bold" style="margin-left: 10px;" (click)="cambiarPantalla(1, $event)">Login Admin</button>
               </div>
               <hr class="my-4">
               <div class="copyright text-center my-auto">
