Ajustes de Estetica

--- a/FrontEnd/src/app/cliente/cliente.component.html
+++ b/FrontEnd/src/app/cliente/cliente.component.html
@@ -267,7 +267,7 @@
               </div>
             </div>
 
-            <a class="btn btn-outline-primary btn-user btn-block">
+            <a class="btn btn-outline-info btn-user btn-block">
               Guardar
             </a>
 
@@ -300,7 +300,7 @@
               </div>
             </div>
 
-            <a class="btn btn-outline-primary btn-user btn-block">
+            <a class="btn btn-outline-info btn-user btn-block">
               Registrar
             </a>
 
@@ -354,7 +354,7 @@
 
             <br>
 
-            <a class="btn btn-outline-primary btn-user btn-block">
+            <a class="btn btn-outline-info btn-user btn-block">
               Generar registro
             </a>
 
@@ -368,7 +368,7 @@
 
             <br>
 
-            <a class="btn btn-outline-primary btn-user btn-block">
+            <a class="btn btn-outline-info btn-user btn-block">
               Generar PDF
             </a>
 
