--- a/FrontEnd/src/app/nutri/nutri.component.html
+++ b/FrontEnd/src/app/nutri/nutri.component.html
@@ -301,7 +301,7 @@
 
             </div>
 
-            <a class="btn btn-outline-primary btn-user btn-block">
+            <a class="btn btn-outline-success btn-user btn-block">
               Guardar
             </a>
 
@@ -325,7 +325,7 @@
 
             </div>
 
-            <a class="btn btn-outline-primary btn-user btn-block">
+            <a class="btn btn-outline-success btn-user btn-block">
               Asociar
             </a>
 
@@ -348,7 +348,7 @@
 
               <br><br><br><br>
 
-              <a class="btn btn-outline-primary btn-user btn-block">
+              <a class="btn btn-outline-success btn-user btn-block">
                 Eliminar
               </a>
 
@@ -383,7 +383,7 @@
 
               <br><br><br><br>
 
-              <a class="btn btn-outline-primary btn-user btn-block">
+              <a class="btn btn-outline-success btn-user btn-block">
                 Modificar
               </a>
 
@@ -412,7 +412,7 @@
 
               <br><br><br><br>
 
-              <a class="btn btn-outline-primary btn-user btn-block">
+              <a class="btn btn-outline-success btn-user btn-block">
                 Crear
               </a>
 
@@ -449,7 +449,7 @@
 
             </div>
 
-            <a class="btn btn-outline-primary btn-user btn-block">
+            <a class="btn btn-outline-success btn-user btn-block">
               Asignar
             </a>
 
@@ -484,7 +484,7 @@
               </div>
             </div>
 
-            <a class="btn btn-outline-primary btn-user btn-block">
+            <a class="btn btn-outline-success btn-user btn-block">
               Enviar retroalimentación
             </a>
 
