--- a/FrontEnd/src/app/nutri/nutri.component.html
+++ b/FrontEnd/src/app/nutri/nutri.component.html
@@ -364,13 +364,15 @@
                         cols="50"></textarea>
             </div>
 
+            <br>
             <div class="form-group row">
+              <div class="col-sm-6" id="comidas1"></div>
 
+              <div class="col-sm-6" id="comidas2"></div>
 
-              <mark>HAY QUE DE ALGUNA MANERA GENERAR CHECKBOXES DINAMICAS, QUE CARGUEN TODOS LOS PRODUCTOS APROBADOS PARA MOSTRAR, QUE SE PUEDAN CHECKEAR, GENERAR LA LISTA QUE COMPONE
-                A TODOS LOS TIEMPOS  DE COMIDA, Y LUEGO ENVIAR EL JSON</mark>
+            </div>
 
-
+            <div class="form-group row">
               <div class="col-sm">
                 <label for="gestionPlanesNombreExistente">Nombre del plan</label>
                 <input type="text" class="form-control form-control-user" id="gestionPlanesNombreExistente">
@@ -378,7 +380,7 @@
 
               <div class="col-sm">
                 <label for="gestionPlanesCaloriasExistente">Total de calorias</label>
-                <input type="text" class="form-control form-control-user" id="gestionPlanesCaloriasExistente">
+                <input type="number" class="form-control form-control-user" id="gestionPlanesCaloriasExistente" readonly>kCAL
               </div>
 
               <br><br><br><br>
@@ -386,7 +388,6 @@
               <a class="btn btn-outline-success btn-user btn-block">
                 Modificar
               </a>
-
             </div>
 
             <br>
