--- a/FrontEnd/src/app/nutri/nutri.component.html
+++ b/FrontEnd/src/app/nutri/nutri.component.html
@@ -166,70 +166,11 @@
           <div id="principal">
             <div class="container-fluid">
               <!-- Page Heading -->
-              <h1 class="h3 mb-4 text-gray-800">Información General</h1>
-
-              <div class="row">
-
-                <!-- Earnings (Monthly) Card Example -->
-                <div class="col-xl-3 col-md-6 mb-4">
-                  <div class="card border-left-primary shadow h-100 py-2">
-                    <div class="card-body">
-                      <div class="row no-gutters align-items-center">
-                        <div class="col mr-2">
-                          <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            Total de Estudiantes
-                          </div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800">
-                            140
-                          </div>
-                        </div>
-                        <div class="col-auto">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                               class="bi bi-person-fill" viewBox="0 0 20 20">
-                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
-                          </svg>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <h1 class="h3 mb-4 text-gray-800">Bienvenido</h1>
 
 
-              <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Clases Impartidas</h6>
-                </div>
-                <div class="card-body">
-                  <h4 class="small font-weight-bold">Indoor Cycling <span class="float-right"></span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="20"
-                         aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Pilates <span class="float-right"></span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="40"
-                         aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Yoga <span class="float-right"></span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="60"
-                         aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Zumba <span class="float-right"></span></h4>
-                  <div class="progress mb-4">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 100%" aria-valuenow="80"
-                         aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <h4 class="small font-weight-bold">Natación <span class="float-right"></span></h4>
-                  <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100"
-                         aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-              </div> -->
 
-            </div> <!-- termina el page content -->
+
           </div>
           <!--------------------------------------------- TERMINA PANTALLA PRINCIPAL --------------------------------------------->
 
