--- a/FrontEnd/src/app/login/login.component.html
+++ b/FrontEnd/src/app/login/login.component.html
@@ -14,7 +14,7 @@
 
 
 
-            <form #form="ngForm" (ngSubmit)="login(form)">
+            <form #form2="ngForm" (ngSubmit)="login(form2)">
               <div class="form-floating mb-3">
                 <input type="number" class="form-control" id="floatingInput" placeholder="1001001001" step="1" name="cedula" ngModel>
                 <label for="floatingInput">Cedula</label>
